--- a/src/Vista/Login.form
+++ b/src/Vista/Login.form
@@ -134,6 +134,7 @@
                 <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="ff" green="ff" red="ff" type="rgb"/>
                 </Property>
+                <Property name="horizontalAlignment" type="int" value="0"/>
                 <Property name="text" type="java.lang.String" value="&#xa9; Grupo 2"/>
               </Properties>
               <Constraints>
