--- a/src/Vista/Bienestar.form
+++ b/src/Vista/Bienestar.form
@@ -39,7 +39,7 @@
       <SubComponents>
         <Component class="javax.swing.JButton" name="bttnMatricula">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Matricula"/>
+            <Property name="text" type="java.lang.String" value="Dep. M&#xe9;dico"/>
             <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
               <Border info="null"/>
             </Property>
@@ -56,7 +56,8 @@
         </Component>
         <Component class="javax.swing.JButton" name="bttnAlumEgre">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Alumnos / Egresados"/>
+            <Property name="text" type="java.lang.String" value="Empleabilidad"/>
+            <Property name="toolTipText" type="java.lang.String" value=""/>
             <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
               <Border info="null"/>
             </Property>
@@ -73,7 +74,7 @@
         </Component>
         <Component class="javax.swing.JButton" name="bttnAdmision">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Admision"/>
+            <Property name="text" type="java.lang.String" value="Bienestar"/>
             <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
               <Border info="null"/>
             </Property>
