--- a/src/Vista/RGSTExpediente.form
+++ b/src/Vista/RGSTExpediente.form
@@ -176,12 +176,15 @@
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
               <StringArray count="3">
-                <StringItem index="0" value="Constancia de Matricula"/>
-                <StringItem index="1" value="Constancia de Rendimiento Academico"/>
-                <StringItem index="2" value="Constacia de Egresados"/>
+                <StringItem index="0" value="Bienestar"/>
+                <StringItem index="1" value="Empleabilidad"/>
+                <StringItem index="2" value="Dep. M&#xe9;dico"/>
               </StringArray>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cbxAsuntoActionPerformed"/>
+          </Events>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
           </AuxValues>
